Hopefully fixed the weird cropping issue on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,12 @@ margin-bottom: 32px;
 
 section {
   text-align: center;
-  margin: 16px;
+  margin-right: 16px;
+  margin-left: 16px;
+  margin-top: 8px;
+  /* note: did this instead of a standard margin
+  to avoid the issue of my text gettig cut out 
+  at the bottom of the screen on mobile.*/
   background-color: rgb(152, 109, 174);
   border: outset;
   border-color: rgb(139, 87, 187);
@@ -53,7 +58,6 @@ section {
   color: floralwhite;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   & > h1 {
     margin: 22.5px;
     font-size: 2em;
